# postrust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.yml  docker-publish.sh  publish.sh
crates/postrust-auth/: Cargo.toml
crates/postrust-auth/src/: claims.rs  jwt.rs  lib.rs
crates/postrust-core/: Cargo.toml
crates/postrust-core/src/: config.rs  error.rs  lib.rs
crates/postrust-core/src/api_request/: mod.rs  payload.rs  preferences.rs  query_params.rs  types.rs
crates/postrust-core/src/plan/: call_plan.rs  mod.rs  mutate_plan.rs  read_plan.rs  types.rs
crates/postrust-core/src/query/: builder.rs  mod.rs
crates/postrust-core/src/schema_cache/: mod.rs  queries.rs  relationship.rs  routine.rs  table.rs
crates/postrust-graphql/: Cargo.toml
crates/postrust-graphql/src/: context.rs  error.rs  handler.rs  lib.rs  scalar.rs  types.rs
crates/postrust-graphql/src/input/: filter.rs  mod.rs  mutation.rs  order.rs
crates/postrust-graphql/src/resolver/: field.rs  mod.rs  mutation.rs  query.rs
crates/postrust-graphql/src/schema/: mod.rs  object.rs  relationship.rs
crates/postrust-graphql/src/subscription/: broker.rs  mod.rs
crates/postrust-graphql/tests/: subscription_integration.rs
crates/postrust-lambda/: Cargo.toml
crates/postrust-lambda/src/: lib.rs  main.rs
crates/postrust-response/: Cargo.toml
crates/postrust-response/src/: headers.rs  json.rs  lib.rs
crates/postrust-server/: Cargo.toml
crates/postrust-server/src/: admin.rs  app.rs  custom.rs  lib.rs  main.rs  state.rs
crates/postrust-sql/: Cargo.toml
crates/postrust-sql/src/: builder.rs  delete.rs  expr.rs  identifier.rs  insert.rs  lib.rs  param.rs  select.rs  update.rs
crates/postrust-worker/: Cargo.toml
crates/postrust-worker/src/: lib.rs
docs/: api-reference.md  authentication.md  configuration.md  custom-routes.md  deployment.md  getting-started.md  index.md  pgvector.md  realtime.md
scripts/: init-db.sql  test-fixtures.sql  test.sh
website/: .gitignore  package-lock.json  package.json  wrangler.toml
website/public/: _headers  _redirects  manifest.json
website/src/: entry.cloudflare-pages.tsx  global.css  root.tsx
website/src/components/docs/: doc-page.tsx
website/src/components/layout/: footer.tsx  header.tsx
website/src/components/sections/: code-examples.tsx  cta.tsx  deployment.tsx  features.tsx  hero.tsx  index.ts  performance.tsx  saas-starter.tsx
website/src/routes/: index.tsx  layout.tsx
website/src/routes/community/: index.tsx
website/src/routes/compare/: index.tsx
website/src/routes/docs/: index.tsx
website/src/routes/docs/api-reference/: index.tsx
website/src/routes/docs/authentication/: index.tsx
website/src/routes/docs/configuration/: index.tsx
website/src/routes/docs/custom-routes/: index.tsx
website/src/routes/docs/deployment/: index.tsx
website/src/routes/docs/getting-started/: index.tsx
website/src/routes/docs/graphql/: index.tsx
website/src/routes/docs/pgvector/: index.tsx
website/src/routes/docs/realtime/: index.tsx
website/src/routes/enterprise/: index.tsx
website/src/routes/features/: index.tsx
website/src/routes/pricing/: index.tsx
