[package]
name = "postrust-response"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Response formatting for Postrust (JSON, CSV, OpenAPI)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes.workspace = true
http.workspace = true
mime.workspace = true
indexmap.workspace = true

postrust-core.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
